[package]
name = "ssg"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
dotenvy.workspace = true
sha2.workspace = true
hmac.workspace = true
hex.workspace = true
reqwest.workspace = true
rand.workspace = true
chrono.workspace = true
zip.workspace = true
base64.workspace = true
walkdir.workspace = true
comrak.workspace = true
